welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: value && is not a member of Unit
    if ( (nums(i+1)=nums(i)+5) && nums ((i+2)==nums(i)-1)){
                               ^has271:4: error: type mismatch;
 found   : Boolean
 required: Int
    if ( (nums(i+1)=nums(i)+5) && nums ((i+2)==nums(i)-1)){
                                             ^has271:7: error: value && is not a member of Unit
    else if ((nums(i+1)=nums(i)+5) && (nums (i+2)<=nums(i)+1 )&& (nums(i+2>=nums(i)-3))){
                                   ^has271:7: error: type mismatch;
 found   : Boolean
 required: Int
    else if ((nums(i+1)=nums(i)+5) && (nums (i+2)<=nums(i)+1 )&& (nums(i+2>=nums(i)-3))){
                                                                          ^